--- a/distribution/index.html
+++ b/distribution/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <meta charset="UTF-8">
-  <style>canvas { width: 100%; height: 100% }</style>
+  <style>body { width: 100%; height: 100%; margin: 0; overflow: hidden; }</style>
   <title>Game</title>
   <script src="javascript/three.js"></script>
   <!script src="javascript/three.min.js"><!/script>
